[package]
name = "jupiter_api"
version = "0.1.7"
edition = "2021"
description = "jupiter api client"
authors = ["Bonedaddy", "alex@bonedaddy.io"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11"
features = ["brotli", "gzip", "deflate", "json"]
[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.serde_json]
version = "1"
[dependencies.anyhow]
version = "1"
[dependencies.solana-sdk]
version = "1.17"
[dependencies.base64]
version = "0.21"
[dependencies.solana-client]
version = "1.17"
[dependencies.bincode]
version = "1"
[dependencies.bytemuck]
version = "1"
[dependencies.spl-token]
version = "4"
features = ["no-entrypoint"]
[dependencies.spl-associated-token-account]
version = "2"
features = ["no-entrypoint"]
[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
[profile.release.build-override]
opt-level = 3
codegen-units = 1
